Changed sorting procedure Added timer function Added display function Added error handling Added pulsewidth modulation function

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,7 +11,7 @@
     "tasks": [
         {
             "taskName": "Assemble",
-            "args": ["${fileBasename}", "${fileBasenameNoExtension}.hex"],
+            "args": ["${fileBasename}", "C:/Users/Koen/Documents/${fileBasenameNoExtension}.hex"],
             "isBuildCommand": true
         }
     ]
